webapp: fix traefik templates

--- a/charts/webapp/templates/traefik-route-tls.yaml
+++ b/charts/webapp/templates/traefik-route-tls.yaml
@@ -1,5 +1,7 @@
 {{ if .Values.ingress.enabled }}
 {{- if .Values.ingress.tlsEnabled }}
+{{- $fullName := include "webapp.fullname" . -}}
+{{- $svcPort := .Values.service.port -}}
 apiVersion: traefik.containo.us/v1alpha1
 kind: IngressRoute
 metadata:
