--- a/charts/webapp/templates/traefik-redirect.yaml
+++ b/charts/webapp/templates/traefik-redirect.yaml
@@ -1,5 +1,6 @@
 {{ if .Values.ingress.enabled }}
 {{- if .Values.ingress.tlsEnabled }}
+{{- $fullName := include "webapp.fullname" . -}}
 apiVersion: traefik.containo.us/v1alpha1
 kind: Middleware
 metadata:
