webapp: fix typo

--- a/charts/webapp/templates/deployment.yaml
+++ b/charts/webapp/templates/deployment.yaml
@@ -67,7 +67,7 @@ spec:
       volumes:
         {{- range $vol := .Values.emptyDirs }}
         - name: {{ $vol.name }}
-          empty: {}
+          emptyDir: {}
         {{- end }}
       {{- range $pvc := .Values.persistentVolumes }}
         - name: {{ $pvc.name }}
