--- a/charts/webapp/templates/pvc.yaml
+++ b/charts/webapp/templates/pvc.yaml
@@ -1,10 +1,10 @@
 {{- $fullName := include "webapp.fullname" . -}}
-{{- range $pvc := .Values.persistentVolumes }}
+{{- range $name, $prop := .Values.volumes }}
 ---
 apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
-  name: {{ $fullName }}-{{ $pvc.name }}
+  name: {{ $fullName }}-{{ $name }}
 spec:
   accessModes:
     - ReadWriteOnce
