--- a/charts/webapp/values.yaml
+++ b/charts/webapp/values.yaml
@@ -40,6 +40,11 @@ securityContext: {}
 
 env: []
 
+ports:
+  - name: http
+    containerPort: 80
+    protocol: TCP
+
 livenessProbe:
   httpGet:
     path: /
