webapp: add lifecycle option

--- a/charts/webapp/templates/deployment.yaml
+++ b/charts/webapp/templates/deployment.yaml
@@ -83,6 +83,10 @@ spec:
           resources:
             {{- toYaml . | nindent 12 }}
           {{- end }}
+          {{- with .Values.lifecycle }}
+          resources:
+            {{- toYaml . | nindent 12 }}
+          {{- end }}
           {{- if or .Values.volumes .Values.tmpfs .Values.hostPath }}
           volumeMounts:
             {{- range $name, $prop := .Values.tmpfs }}
