webapp: support middlewares in IngressRoute

--- a/charts/webapp/templates/traefik-route-tls.yaml
+++ b/charts/webapp/templates/traefik-route-tls.yaml
@@ -21,6 +21,11 @@ spec:
       services:
         - name: {{ $fullName }}
           port: {{ $svcPort }}
+      {{- with .Values.ingress.middlewares }}
+      middlewares:
+        {{- toYaml . | nindent 8 }}
+      {{- end }}
+
   tls:
     certResolver: main
     domains:
