--- a/charts/webapp/values.yaml
+++ b/charts/webapp/values.yaml
@@ -81,6 +81,7 @@ ingress:
   enabled: false
   tlsEnabled: false
   host: ""
+  middlewares: []
 
 resources: {}
   # We usually recommend not to specify default resources and to leave this as a conscious
