--- a/charts/webapp/templates/traefik-route.yaml
+++ b/charts/webapp/templates/traefik-route.yaml
@@ -20,8 +20,11 @@ spec:
       services:
         - name: {{ $fullName }}
           port: {{ $svcPort }}
-{{- if .Values.ingress.tlsEnabled }}
       middlewares:
+        {{- with .Values.ingress.middlewares }}
+        {{- toYaml . | nindent 8 }}
+        {{- end }}
+        {{- if .Values.ingress.tlsEnabled }}
         - name: {{ $fullName }}-redirect-https
-{{- end -}}
+        {{- end -}}
 {{ end }}
