--- a/charts/webapp/values.yaml
+++ b/charts/webapp/values.yaml
@@ -10,6 +10,10 @@ image:
   # Overrides the image tag whose default is the chart appVersion.
   tag: ""
 
+deployment:
+  strategy:
+    type: RollingUpdate
+
 imagePullSecrets: []
 nameOverride: ""
 fullnameOverride: ""
