--- a/charts/minio/templates/traefik-route-tls.yaml
+++ b/charts/minio/templates/traefik-route-tls.yaml
@@ -1,7 +1,7 @@
 {{ if .Values.ingress.enabled }}
 {{- if .Values.ingress.tlsEnabled }}
 {{- $fullName := include "minio.fullname" . -}}
-apiVersion: traefik.containo.us/v1alpha1
+apiVersion: traefik.io/v1alpha1
 kind: IngressRoute
 metadata:
   name: {{ $fullName }}-tls
