--- a/charts/webapp/templates/traefik-route-tls.yaml
+++ b/charts/webapp/templates/traefik-route-tls.yaml
@@ -2,7 +2,7 @@
 {{- if .Values.ingress.tlsEnabled }}
 {{- $fullName := include "webapp.fullname" . -}}
 {{- $svcPort := .Values.service.port -}}
-apiVersion: traefik.containo.us/v1alpha1
+apiVersion: traefik.io/v1alpha1
 kind: IngressRoute
 metadata:
   name: {{ $fullName }}-tls
