--- a/charts/webapp/templates/traefik-route.yaml
+++ b/charts/webapp/templates/traefik-route.yaml
@@ -1,7 +1,7 @@
 {{ if .Values.ingress.enabled }}
 {{- $fullName := include "webapp.fullname" . -}}
 {{- $svcPort := .Values.service.port -}}
-apiVersion: traefik.containo.us/v1alpha1
+apiVersion: traefik.io/v1alpha1
 kind: IngressRoute
 metadata:
   name: {{ $fullName }}
